// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users reducers bulk delete 1`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
    Immutable.Map {
      id: 3,
      name: "Julien",
    },
  ],
  agents: Immutable.List [
  ],
  userHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  agentsLocation: Immutable.List [
  ],
  agentsTypingStatus: Immutable.List [
  ],
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      submitUser: false,
      merge: false,
    },
  },
}
`;

exports[`users reducers clear ticket 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Object {},
    "triedLoading": false,
  },
}
`;

exports[`users reducers clear user 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers create agent 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [
    Object {
      "id": 1,
      "name": "Romain",
    },
  ],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers delete agent 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [
    Object {
      "id": 1,
      "name": "Romain",
    },
  ],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers delete user 1`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
    Immutable.Map {
      id: 1,
    },
  ],
  agents: Immutable.List [
    Immutable.Map {
      id: 1,
    },
  ],
  userHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  agentsLocation: Immutable.List [
  ],
  agentsTypingStatus: Immutable.List [
  ],
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      submitUser: false,
      merge: false,
    },
  },
}
`;

exports[`users reducers fetch list 1`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
    Immutable.Map {
      name: "Alex",
    },
    Immutable.Map {
      name: "Romain",
    },
  ],
  agents: Immutable.List [
  ],
  userHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  agentsLocation: Immutable.List [
  ],
  agentsTypingStatus: Immutable.List [
  ],
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      submitUser: false,
      merge: false,
    },
  },
}
`;

exports[`users reducers fetch list 2`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
  ],
  agents: Immutable.List [
  ],
  userHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  agentsLocation: Immutable.List [
  ],
  agentsTypingStatus: Immutable.List [
  ],
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      submitUser: false,
      merge: false,
    },
  },
}
`;

exports[`users reducers fetch user 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": true,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers fetch user 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {
    "id": 1,
  },
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers fetch user 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers fetch user history 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": true,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": true,
  },
}
`;

exports[`users reducers fetch user history 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": true,
    "tickets": Array [
      Object {
        "id": 1,
      },
      Object {
        "id": 2,
      },
    ],
    "triedLoading": false,
  },
}
`;

exports[`users reducers fetch user history 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [
      Object {
        "id": 1,
      },
    ],
    "triedLoading": false,
  },
}
`;

exports[`users reducers fetch user history 4`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Object {},
    "triedLoading": false,
  },
}
`;

exports[`users reducers fetch users (agents) 1`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
  ],
  agents: Immutable.List [
  ],
  userHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  agentsLocation: Immutable.List [
  ],
  agentsTypingStatus: Immutable.List [
  ],
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      submitUser: false,
      merge: false,
    },
  },
}
`;

exports[`users reducers fetch users (agents) 2`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
  ],
  agents: Immutable.List [
  ],
  userHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  agentsLocation: Immutable.List [
  ],
  agentsTypingStatus: Immutable.List [
  ],
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      submitUser: false,
      merge: false,
    },
  },
}
`;

exports[`users reducers fetch users (agents) 3`] = `
Immutable.Map {
  active: Immutable.Map {
  },
  items: Immutable.List [
  ],
  agents: Immutable.List [
    Immutable.Map {
      id: 1,
    },
    Immutable.Map {
      id: 2,
    },
  ],
  userHistory: Immutable.Map {
    triedLoading: false,
    hasHistory: false,
    tickets: Immutable.List [
    ],
    events: Immutable.List [
    ],
  },
  agentsLocation: Immutable.List [
  ],
  agentsTypingStatus: Immutable.List [
  ],
  _internal: Immutable.Map {
    loading: Immutable.Map {
      history: false,
      active: false,
      submitUser: false,
      merge: false,
    },
  },
}
`;

exports[`users reducers merge users 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": true,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers merge users 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Alex",
  },
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers merge users 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Romain",
  },
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers set agents location 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [
    Object {
      "ticket": "1",
      "users": Array [
        "1",
        "2",
      ],
    },
    Object {
      "ticket": "2",
      "users": Array [
        "1",
      ],
    },
  ],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers set agents typing status 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [
    Object {
      "ticket": "1",
      "users": Array [
        "1",
        "2",
      ],
    },
    Object {
      "ticket": "2",
      "users": Array [
        "1",
      ],
    },
  ],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers submit user 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": true,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers submit user 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Alex",
  },
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [
    Object {
      "id": 1,
      "name": "Alex",
    },
  ],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers submit user 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Romain",
  },
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [
    Object {
      "id": 1,
      "name": "Romain",
    },
  ],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers submit user 4`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Alex",
    "roles": Array [
      Object {
        "name": "agent",
      },
    ],
  },
  "agents": Array [
    Object {
      "id": 1,
      "name": "Alex",
      "roles": Array [
        Object {
          "name": "agent",
        },
      ],
    },
  ],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [
    Object {
      "id": 1,
      "name": "Alex",
      "roles": Array [
        Object {
          "name": "agent",
        },
      ],
    },
  ],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers submit user 5`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Romain",
  },
  "agents": Array [
    Object {
      "name": "Alex",
      "roles": Array [
        Object {
          "name": "agent",
        },
      ],
    },
  ],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [
    Object {
      "id": 1,
      "name": "Romain",
    },
  ],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers submit user 6`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {
    "id": 1,
    "name": "Alex",
  },
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [
    Object {
      "id": 1,
      "name": "Alex",
    },
  ],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers submit user 7`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers update agent 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [
    Object {
      "id": 1,
      "name": "Alex",
    },
    Object {
      "id": 2,
      "name": "John",
    },
  ],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;

exports[`users reducers update agent 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "active": false,
      "history": false,
      "merge": false,
      "submitUser": false,
    },
  },
  "active": Object {},
  "agents": Array [
    Object {
      "id": 1,
      "name": "Romain",
    },
    Object {
      "id": 2,
      "name": "John",
    },
  ],
  "agentsLocation": Array [],
  "agentsTypingStatus": Array [],
  "items": Array [],
  "userHistory": Object {
    "events": Array [],
    "hasHistory": false,
    "tickets": Array [],
    "triedLoading": false,
  },
}
`;
